--- a/interfaces/templates/guest_interface.html
+++ b/interfaces/templates/guest_interface.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% csrf_token %}
 <!DOCTYPE html>
 <html lang="pl">
 	<head>
@@ -36,10 +37,10 @@
                         <h1>Witamy w VIGO photonics!</h1>
                         <h2>Proszę podaj swoje dane:</h2>
                         <form id="add-form" method="post">
-                            <input type="text" name="firstname" placeholder="Imię"/><br/>
+                            <input type="text" name="guest_full_name" placeholder="Imię"/><br/>
                             <input type="text" name="lastname" placeholder="Nazwisko"/><br/>
-                            <input type="text" name="keeper" placeholder="Opiekun"/><br/>
-                            <input type="text" name="brand" placeholder="Firma"/><br/>
+                            <input type="text" name="keeper_full_name" placeholder="Opiekun"/><br/>
+                            <input type="text" name="company" placeholder="Firma"/><br/>
                             <input type="submit" name="submit" value="ZATWIERDŹ"/><br/>
                         </form>
                         <div id="output">
