--- a/interfaces/templates/guest_interface.html
+++ b/interfaces/templates/guest_interface.html
@@ -51,7 +51,7 @@
         </div>
         <footer>
             <div id="bottombar">
-                VIGO photonics
+                VIGO PHOTONICS
             </div>
         </footer>
     </body>
