--- a/interfaces/templates/reception_interface.html
+++ b/interfaces/templates/reception_interface.html
@@ -47,7 +47,7 @@
         </div>
         <footer>
             <div id="bottombar">
-                VIGO photonics
+                VIGO PHOTONICS
             </div>
         </footer>
     </body>
