--- a/interfaces/templates/guest_interface.html
+++ b/interfaces/templates/guest_interface.html
@@ -28,6 +28,7 @@
             <div id="topbar">
                 <img src="{% static 'img/logo.jpg'%}" alt="">
                 REJESTRACJA GOŚCI
+                <p><a href="/logout">Log Out</a></p>
             </div>
         </header>
         <div class="container">
