--- a/interfaces/templates/reception_interface.html
+++ b/interfaces/templates/reception_interface.html
@@ -28,10 +28,7 @@
             <div id="topbar">
                 <img src="{% static 'img/logo.jpg'%}" alt="">
                 REJESTRACJA GOŚCI
-
-                <p><a href="/logout">Log Out</a></p>
-
-
+                <a href="/logout">Log Out</a>
             </div>
         </header>
         <div class="container">
