Minor night hotfixes

--- a/interfaces/templates/reception_interface.html
+++ b/interfaces/templates/reception_interface.html
@@ -27,8 +27,8 @@
         <header>
             <div id="topbar">
                 <img src="{% static 'img/logo.jpg'%}" alt="">
-                REJESTRACJA GOŚCI
-                <a href="/logout">Log Out</a>
+                <span>REJESTRACJA GOŚCI</span>
+                <a href="/logout">Wyloguj</a>
             </div>
         </header>
         <div class="container">
