--- a/interfaces/templates/guest_interface.html
+++ b/interfaces/templates/guest_interface.html
@@ -22,8 +22,8 @@
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 		<script src="{% static 'js/guest.js'%}"></script>
-    </head>
-	<body style="overflow: hidden;">
+	</head>
+	<body>
         <header>
             <div id="topbar">
                 <img src="{% static 'img/logo.jpg'%}" alt="">
@@ -34,7 +34,7 @@
             <main>
                 <div class="col-12 text-center">
                     <section>
-                        <h1>Witamy w VIGO photonics!</h1>
+                        <h1>Witamy w VIGO Photonics!</h1>
                         <h2>Proszę podaj swoje dane:</h2>
                         <form id="add-form" method="post">
                             {% csrf_token %}
