--- a/interfaces/templates/guest_interface.html
+++ b/interfaces/templates/guest_interface.html
@@ -5,17 +5,16 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Interfejs rejestracji gości - strona gościa">
+		<meta name="description" content="Guest registration interface - guest side">
 		<meta name="keywords" content="">
 		<meta name="author" content="VIGO photonics">
 		<meta http-equiv="X-Ua-Compatible" content="IE=edge">
 		
-		<title>Rejestracja gości</title>
+		<title></title>
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300;400;700&display=swap" rel="stylesheet">
-		<!--<link href="css/fontello.css" rel="stylesheet" type="text/css">-->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 		<link href="{% static 'css/main.css'%}" rel="stylesheet" type="text/css">
 
@@ -27,22 +26,28 @@
         <header>
             <div id="topbar">
                 <img src="{% static 'img/logo.jpg'%}" alt="">
-                REJESTRACJA GOŚCI
+                <span></span>
             </div>
         </header>
         <div class="container">
+            <aside>
+                <div id="language" class="col-12 text-end">
+                    <span></span>
+                    <button onclick="switch_to_ang()">ANG</button>
+                    <button onclick="switch_to_pl()">PL</button>
+                </div>
+            </aside>
             <main>
                 <div class="col-12 text-center">
                     <section>
-                        <h1>Witamy w VIGO Photonics!</h1>
-                        <h2>Proszę podaj swoje dane:</h2>
+                        <h1></h1>
+                        <h2></h2>
                         <form id="add-form" method="post">
-                            {% csrf_token %}
-                            <input type="text" name="guest_first_name" placeholder="Imię" autocomplete="off"/><br/>
-                            <input type="text" name="guest_last_name" placeholder="Nazwisko" autocomplete="off"/><br/>
-                            <input type="text" name="keeper_full_name" placeholder="Opiekun" autocomplete="off"/><br/>
-                            <input type="text" name="company" placeholder="Firma" autocomplete="off"/><br/>
-                            <input type="submit" name="submit" value="ZATWIERDŹ" autocomplete="off"/><br/>
+                            <input type="text" name="guest_first_name" autocomplete="off"/><br/>
+                            <input type="text" name="guest_last_name" autocomplete="off"/><br/>
+                            <input type="text" name="keeper_full_name" autocomplete="off"/><br/>
+                            <input type="text" name="company" autocomplete="off"/><br/>
+                            <input type="submit" name="submit" autocomplete="off"/><br/>
                         </form>
                         <div id="output">
                         </div>
