--- a/interfaces/templates/reception_interface.html
+++ b/interfaces/templates/reception_interface.html
@@ -5,17 +5,16 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Interfejs rejestracji gości - strona gościa">
+		<meta name="description" content="Guest registration interface - reception side">
 		<meta name="keywords" content="">
-		<meta name="author" content="VIGO photonics">
+		<meta name="author" content="VIGO Photonics">
 		<meta http-equiv="X-Ua-Compatible" content="IE=edge">
 		
-		<title>Rejestracja gości</title>
+		<title></title>
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300;400;700&display=swap" rel="stylesheet">
-		<!--<link href="css/fontello.css" rel="stylesheet" type="text/css">-->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 		<link href="{% static 'css/main.css'%}" rel="stylesheet" type="text/css">
 
@@ -27,19 +26,26 @@
         <header>
             <div id="topbar">
                 <img src="{% static 'img/logo.jpg'%}" alt="">
-                <span>REJESTRACJA GOŚCI</span>
-                <a href="/logout">Wyloguj</a>
+                <span></span>
+                <a href="/logout"></a>
             </div>
         </header>
         <div class="container">
+            <aside>
+                <div id="language" class="col-12 text-end">
+                    <span></span>
+                    <button onclick="switch_to_ang()">ANG</button>
+                    <button onclick="switch_to_pl()">PL</button>
+                </div>
+            </aside>
             <main>
                 <div class="col-12 text-center">
                     <section>
-                        <h1>Oczekujący na przydzielenie karty:</h1>
+                        <h1 id="awaiting-title"></h1>
                         <div id="awaiting">
                             
                         </div>
-                        <h1>Lista przydzielonych kart:</h1>
+                        <h1 id="active-title"></h1>
                         <div id="active"></div>
                         <div id="output"></div>
                     </section>
