--- a/interfaces/templates/guest_interface.html
+++ b/interfaces/templates/guest_interface.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Guest registration interface - guest side">
 		<meta name="keywords" content="">
-		<meta name="author" content="VIGO photonics">
+		<meta name="author" content="VIGO Photonics">
 		<meta http-equiv="X-Ua-Compatible" content="IE=edge">
 		
 		<title></title>
