--- a/interfaces/templates/reception_interface.html
+++ b/interfaces/templates/reception_interface.html
@@ -27,7 +27,9 @@
             <div id="topbar">
                 <img src="{% static 'img/logo.jpg'%}" alt="">
                 <span></span>
-                <a href="/logout"></a>
+                <div id="center-div">
+                    <a href="/logout"></a>
+                </div>
             </div>
         </header>
         <div class="container">
