Beautified starting panel

--- a/interfaces/templates/panel.html
+++ b/interfaces/templates/panel.html
@@ -37,9 +37,10 @@
                         <h1>Wybierz moduł</h1>
                         <div id="add-form" >
                             <div id="list">
-                                <a id="" href="/guest">Panel Gościa</a>
-                                <a href="/reception">Panel Recepcyjny</a>
-                                <a href="/admin">Panel Administratora</a>
+                                <a class="panel-entry" id="" href="/guest">Panel Gościa</a>
+                                <a class="panel-entry" href="/reception">Panel Recepcyjny</a>
+                                <a class="panel-entry" href="/admin">Panel Administratora</a>
+                                <!-- <input type="submit" name="submit" autocomplete="off"/><br/> -->
                             </div>
                         </div>
                         <div id="output">
