--- a/interfaces/static/css/main.css
+++ b/interfaces/static/css/main.css
@@ -186,6 +186,35 @@ body
     outline: none;
 }
 
+.panel-entry
+{
+    padding: 1em;
+    border-radius: 30px;
+    text-decoration: none;
+    background-color: var(--e-global-color-primary);
+    color: var(--e-global-color-743c696);
+    border: none;
+    width: 200px;
+    text-align: center;
+    transition: transform 0.3s;
+    font-weight: normal;
+}
+
+.panel-entry:hover
+{
+    background-color: var(--e-global-color-accent);
+    transform: scale(0.9);
+    border: none;
+}
+
+.panel-entry:focus
+{
+    background-color: var(--e-global-color-accent);
+    transform: scale(0.9);
+    border: none;
+    outline: none;
+}
+
 .entry
 {
     width: 100%;
@@ -332,5 +361,7 @@ footer
 #list {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    gap: 1em;
 }
 
