--- a/vigo_guests/templates/admin/login.html
+++ b/vigo_guests/templates/admin/login.html
@@ -50,11 +50,11 @@
 <form action="{{ app_path }}" method="post" id="login-form">{% csrf_token %}
   <div class="form-row">
     {{ form.username.errors }}
-    {{ form.username.label_tag }} {{ form.username }}
+    {{ "Domenowa nazwa użytkownika (część maila firmowego do znaku: @)"}} {{ form.username }}
   </div>
   <div class="form-row">
     {{ form.password.errors }}
-    {{ form.password.label_tag }} {{ form.password }}
+    {{ "Hasło" }} {{ form.password }}
     <input type="hidden" name="next" value="{{ next }}">
   </div>
   {% url 'admin_password_reset' as password_reset_url %}
