Hotfixes with barcode scanner

--- a/interfaces/templates/reception_interface.html
+++ b/interfaces/templates/reception_interface.html
@@ -36,7 +36,7 @@
             <aside>
                 <div id="language" class="col-12 text-end">
                     <span></span>
-                    <button onclick="switch_to_ang()">ANG</button>
+                    <button onclick="switch_to_ang()">ENG</button>
                     <button onclick="switch_to_pl()">PL</button>
                 </div>
             </aside>
